--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
   
-    <a href="https://api.whatsapp.com/send?phone=8078334505" class="float" target="_blank">
+    <a href="wa.me/971561935003" class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
         </a>    
 <div class="site-mobile-menu site-navbar-target">
