--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
         </div>
       </div>
          <ul class="site-menu js-clone-nav  d-none d-block">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
