--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
     
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
-    <a href="wa.me/971561935003" class="float" target="_blank">
+    
+
+    <a href="Wa.me/8078334505" class="float" target="_blank">
       <i class="fa fa-whatsapp my-float"></i>
       </a>  
-  
-   
 
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
@@ -56,8 +56,8 @@
 
               <ul class="site-menu js-clone-nav  d-none d-block">
                 <li><a href="index.html">Home</a></li>
-                <liclass="active"><a href="about.html">About Us</a></li>
-                <li ><a href="services.html">Services</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -67,7 +67,7 @@
         </div>
       </div>
     </header>
-
+  
     <div class="site-blocks-cover overlay"  style="background-image: url(https://www.seawaysindia.com/images/a59b81b6ffccad5440fc573e75953996.jpg);" data-aos="fade" data-stellar-background-ratio="0.5" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
